<resources>
    <string name="app_name">PAD Friend Finder</string>
    <string name="submit">Submit</string>
    <string name="find_friends">Find Friends</string>
    <string name="monster_box">Monster Box</string>

    <!-- PAD ID Form -->
    <string name="pad_id_label">PAD ID Form</string>
    <string name="your_pad_id">Your PAD ID</string>
    <string name="enter_pad_id">Enter in a PAD ID</string>
    <string name="intro">This app needs your PAD ID in order to work, so please enter it below.</string>

    <!-- Monster Search -->
    <string name="hypermax">Hypermax</string>
    <string name="minimum">Minimum</string>
    <string name="max">Max</string>
    <string name="lvl">Lvl:</string>
    <string name="awkns">Awkns:</string>
    <string name="abbreviated_plus_eggs">+ eggs:</string>
    <string name="s_lvl">S Lvl:</string>
    <string name="no_monster_chosen">No monster chosen</string>

    <!-- Monster Box -->
    <string name="monster_box_instructions">These are the monsters associated with your PAD ID.
        Hit the + button in the bottom right to add monsters to your box.
        Click on any monster to see its options.</string>
    <string name="no_monsters">There are no monsters associated with your PAD ID.</string>
    <string name="add_monster">Add Monster</string>
    <string name="monster_box_label">Monster Box</string>

    <!-- Friend Results -->
    <string name="pad_id">PAD ID:&#160;</string>
    <string name="monster_picture">Monster Picture</string>
    <string name="no_results">We were unable to find any monsters matching your criteria.</string>
    <string name="friend_results_label">Search Results</string>
    <string name="friend_results_instructions">Click on any friend result to copy the PAD ID for easy pasting in game.</string>

    <!-- Monster Showing -->
    <string name="name">Name:&#160;</string>
    <string name="level">Level:&#160;</string>
    <string name="awakenings">Awakenings:&#160;</string>
    <string name="plus_eggs">Plus Eggs:&#160;</string>
    <string name="skill_level">Skill Level:&#160;</string>
    <string name="title_activity_others_box">Monster Box</string>

    <!-- Others Box -->
    <string name="no_id_chosen">No ID chosen.</string>
    <string name="no_monsters_for_other">No monsters to display.</string>

    <!-- Top Leaders -->
    <string name="leader_count">Count:&#160;</string>
    <string name="lvinstructions">Press on any leader to search for hypermaxed ones.</string>

    <!-- Font Awesome Icons -->
    <string name="star_icon">{fa-star}</string>
    <string name="support_icon">{fa-support}</string>
    <string name="search_icon">{fa-search}</string>
    <string name="settings_icon">{fa-gear}</string>
    <string name="clipboard_icon">{fa-clipboard}</string>
    <string name="edit_icon">{fa-edit}</string>
    <string name="choose_avatar_icon">{fa-file-picture-o}</string>
    <string name="rate_us_icon">{fa-thumbs-up}</string>
    <string name="delete_icon">{fa-remove}</string>
    <string name="email_icon">{fa-envelope}</string>
    <string name="rankings_icon">{fa-bar-chart}</string>
    <string name="plus_icon">{fa-plus}</string>

    <!-- Favorite String(s) -->
    <string name="favsInstructions">Click on any ID to look at their monster box.
        Click on the star next to any ID to favorite/unfavorite it.</string>
    <string name="noFavs">You do not have any favorited IDs to display.</string>
    <string name="favorites_label">Favorites</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="favorites">Favorites</string>
    <string name="supported_leads">Supported Leads</string>
    <string name="top_leaders">Popular Leaders</string>
    <string name="id_search">ID Search</string>
    <string name="settings">Settings</string>
    <string-array name="nav_drawer_tabs">
        <item>@string/favorites</item>
        <item>@string/supported_leads</item>
        <item>@string/top_leaders</item>
        <item>@string/id_search</item>
        <item>@string/settings</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@string/star_icon</item>
        <item>@string/support_icon</item>
        <item>@string/rankings_icon</item>
        <item>@string/search_icon</item>
        <item>@string/settings_icon</item>
    </string-array>

    <!-- Progress -->
    <string name="loading_monster_list">Loading monster list&#8230;</string>

    <!-- Supported leads -->
    <string name="supported_leads_label">Supported Leads</string>
    <string name="search">Search</string>

    <!-- Settings -->
    <string name="change_pad_id">Change your PAD ID</string>
    <string name="choose_avatar">Choose your avatar</string>
    <string name="send_feedback">Send feedback</string>
    <string name="rate_this_app">Rate this app</string>
    <string-array name="settings_options">
        <item>@string/change_pad_id</item>
        <item>@string/choose_avatar</item>
        <item>@string/send_feedback</item>
        <item>@string/rate_this_app</item>
    </string-array>
    <string-array name="settings_icons">
        <item>@string/edit_icon</item>
        <item>@string/choose_avatar_icon</item>
        <item>@string/email_icon</item>
        <item>@string/rate_us_icon</item>
    </string-array>
    <string name="choose_avatar_label">Choose Avatar</string>
    <string name="play_store_error">Unable to open the Play Store.</string>
    <string name="support_email">chessnone@gmail.com</string>
    <string name="email_subject">PAD Friend Finder Feedback (Android)</string>
    <string name="title_activity_top_leaders">Popular Leaders</string>
</resources>
