<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.randomappsinc.padfriendfinder.Activities.OthersBoxActivity">

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pad_id"
        android:id="@+id/PAD_ID"
        android:singleLine="true"
        android:inputType="number"
        android:maxLength="9"
        android:imeOptions="actionSearch"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.beardedhen.androidbootstrap.FontAwesomeText
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fontawesometext:fa_icon="@string/star_icon"
            android:textColor="@color/silver"
            android:id="@+id/star_icon"
            android:textSize="48sp"/>

        <TextView
            android:id="@+id/entered_id"
            android:text="@string/no_id_chosen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_toLeftOf="@+id/star_icon"/>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/others_list"
            android:visibility="gone"
            android:paddingTop="5dp"
            android:layout_below="@+id/entered_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loading_box"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone"
            android:text="@string/no_monsters_for_other"
            android:layout_below="@+id/star_icon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</LinearLayout>
