<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/loading_friend_results"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/friend_results_intro"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/monster_bar"
        android:layout_below="@+id/friend_results_intro"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/monster_picture"
            android:contentDescription="@string/monster_picture"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="5dp"
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/monster_name"
            android:visibility="gone"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/friend_results_instructions"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_below="@+id/monster_bar"
        android:text="@string/friend_results_instructions"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/no_results"
        android:visibility="gone"
        android:text="@string/no_results"
        android:textSize="28sp"
        android:layout_below="@+id/friend_results_instructions"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/friend_results_list"
        android:visibility="gone"
        android:layout_below="@+id/friend_results_instructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</RelativeLayout>